# playground

./: .env  .env.example  .gitignore  env.sh  go.sh  prod.env.sh  prod.go.sh
app/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  shell.nix  vite.config.js
app/src/: App.vue  config.js  main.js  router.js  vuetify.js
app/src/assets/: O9882.yaml  Z550.yaml  Z560.yaml  Z570.yaml  Z590.yaml  Z600.yaml  Z620.yaml  Z630.yaml  Z6372.yaml  Z640.yaml  Z650.yaml  Z6833.yaml  Z6842.yaml
app/src/components/: Footer.vue  Header.vue  Heatmap.vue  PatientsList.vue
app/src/router/: index.js
app/src/views/: AnalysisView.vue  BarView.vue  BazView.vue  FooView.vue  HelloView.vue  PatientDetails.vue  PatientListView.vue
src/upload/: __init__.py  _auto.py  _config.py  server.py  util.py
src/upload/templates/: upload.html  upload_post.html
web/: pyproject.toml  requirements.txt
web/src/web/: _auto.py  _config.py  server.py  util.py  vainl.py
web/src/web/prompt/: FOO.template
www/api/: models.py  tasks.py
www/www/: __init__.py  celery.py  settings.py  urls.py
